# headjack-search-service

./: README.md  docker-compose.yml  pyproject.toml
examples/: embed.py
headjack_search_service/api/: app.py  helpers.py
